Lesson 7: create catalog category
