# merch_shop/config/openapi.php
@@ -39,6 +39,10 @@ return [
                     'name' => 'auth',
                     'description' => 'Auth',
                 ],
+                [
+                    'name' => 'categories',
+                    'description' => 'Categories',
+                ],
 
             ],
 
